Fixing country (needs to be flagged) and month name (use 3-letter abbrev)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: bootcamp
 root: .
 venue: Glasgow University
 address: Room 320, Kelvin Building
-country: Scotland
-humandate: December 12-13, 2013
+country: United-Kingdom
+humandate: Dec 12-13, 2013
 humantime: 9:00 am - 4:30 pm
 startdate: 2013-12-12
 enddate: 2013-12-13
