include setup information

--- a/index.html
+++ b/index.html
@@ -35,6 +35,40 @@ contact: admin-uk@software-carpentry.org
   </div>
 </div>
 
+<h2>Required Software</h2>
+
+<p>In order to take part in the bootcamp, please set up this software <em>before</em> you arrive.</p>
+
+<div class="row-fluid">
+  <div class="span6">
+    {% include setup/overview-editor.html %}
+    {% include setup/windows-editor.html %}
+    {% include setup/macosx-editor.html %}
+    {% include setup/linux-editor.html %}
+  </div>
+  <div class="span6">
+    {% include setup/overview-bash.html %}
+    {% include setup/windows-bash.html %}
+    {% include setup/macosx-bash.html %}
+    {% include setup/linux-bash.html %}
+  </div>
+</div>
+<hr/>
+<div class="row-fluid">
+  <div class="span6">
+    {% include setup/overview-python.html %}
+    {% include setup/linux-python.html %}
+    {% include setup/macosx-python.html %}
+    {% include setup/windows-python.html %}
+  </div>
+  <div class="span6">
+    {% include setup/overview-git.html %}
+    {% include setup/linux-git.html %}
+    {% include setup/macosx-git.html %}
+    {% include setup/windows-git.html %}
+  </div>
+</div>
+
 <h2>Reference Guides</h2>
 
 <ul>
