--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@ contact: admin-uk@software-carpentry.org
 {% include bootcamps/python.html %}
 {% include bootcamps/contact.html %}
 
+Timetable:
+
+Day 1:
+
+8:30-9:00 setup, help with installation
+9:00-9:30 introduction, etc. (Ben)
+9:30-10:30 Shell I (James)
+10:30-10:45 coffee break
+10:45-12:00 Shell II (James)
+12:00-1:00 lunch
+1:00-2:00 Regular Expressions (Ben)
+2:00-3:00 Python I (James)
+3:00-3:15 coffee break
+3:15-4:00 Python II (James)
+4:00-5:00 Classes & Objects (Ben)
+
+
+Day 2:
+
+8:30-9:00 questions/problems from day 1
+9:00-10:30 Version Control I (Ben)
+10:30-10:45 coffee break
+10:45-12:00 Version Control II (Ben)
+12:00-1:00 lunch
+1:00-3:00 Testing (James)
+3:00-3:15 coffee break
+3:15-4:30 Make (Ben)
+4:30-5:00 wrapup (James)
+
 <hr/>
 
 <h2>Setup</h2>
