--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ contact: admin-uk@software-carpentry.org
 {% include bootcamps/requirements.html %}
 {% include bootcamps/python.html %}
 {% include bootcamps/contact.html %}
+<hr/>
 
-Timetable:
+<p>Timetable:
 
 Day 1:
 
@@ -48,8 +49,7 @@ Day 2:
 3:00-3:15 coffee break
 3:15-4:30 Make (Ben)
 4:30-5:00 wrapup (James)
-
-<hr/>
+</p>
 
 <h2>Setup</h2>
 
